update footer links

--- a/hawc/templates/includes/epa/footer.html
+++ b/hawc/templates/includes/epa/footer.html
@@ -9,9 +9,9 @@
                     <li class="menu__item"><a href="https://www.epa.gov/accessibility/epa-accessibility-statement" class="menu__link">Accessibility Statement</a></li>
                     <li class="menu__item"><a href="https://www.epa.gov/planandbudget" class="menu__link">Budget &amp; Performance</a></li>
                     <li class="menu__item"><a href="https://www.epa.gov/contracts" class="menu__link">Contracting</a></li>
-                    <li class="menu__item"><a href="https://www.epa.gov/home/wwwepagov-snapshots" class="menu__link">EPA www Web Snapshot</a></li>
+                    <li class="menu__item"><a href="https://www.epa.gov/utilities/wwwepagov-snapshots" class="menu__link">EPA www Web Snapshot</a></li>
                     <li class="menu__item"><a href="https://www.epa.gov/grants" class="menu__link">Grants</a></li>
-                    <li class="menu__item"><a href="https://www.epa.gov/ocr/whistleblower-protections-epa-and-how-they-relate-non-disclosure-agreements-signed-epa-employees" class="menu__link">No FEAR Act Data</a></li>
+                    <li class="menu__item"><a href="https://www.epa.gov/ocr/whistleblower-protections-epa-and-how-they-relate-non-disclosure-agreements-signed-epa" class="menu__link">No FEAR Act Data</a></li>
                     <li class="menu__item"><a href="https://www.epa.gov/web-policies-and-procedures/plain-writing" class="menu__link">Plain Writing</a></li>
                     <li class="menu__item"><a href="https://www.epa.gov/privacy" class="menu__link">Privacy</a></li>
                     <li class="menu__item"><a href="https://www.epa.gov/privacy/privacy-and-security-notice" class="menu__link">Privacy and Security Notice</a></li>
@@ -20,15 +20,14 @@
             <div class="footer__column">
                 <h2>Connect.</h2>
                 <ul class="menu menu--footer">
-                    <li class="menu__item"><a href="https://www.data.gov/" class="menu__link">Data.gov{% include "./exit.html" %}</a></li>
-                    <li class="menu__item"><a href="https://www.epa.gov/office-inspector-general/about-epas-office-inspector-general" class="menu__link">Inspector General</a></li>
+                    <li class="menu__item"><a href="https://www.epa.gov/data" class="menu__link">Data</a></li>
+                    <li class="menu__item"><a href="https://www.epaoig.gov" class="menu__link">Inspector General</a></li>
                     <li class="menu__item"><a href="https://www.epa.gov/careers" class="menu__link">Jobs</a></li>
                     <li class="menu__item"><a href="https://www.epa.gov/newsroom" class="menu__link">Newsroom</a></li>
-                    <li class="menu__item"><a href="https://www.epa.gov/data" class="menu__link">Open Government</a></li>
-                    <li class="menu__item"><a href="https://www.regulations.gov/" class="menu__link">Regulations.gov{% include "./exit.html" %}</a></li>
+                    <li class="menu__item"><a href="https://www.regulations.gov" class="menu__link">Regulations.gov{% include "./exit.html" %}</a></li>
                     <li class="menu__item"><a href="https://www.epa.gov/newsroom/email-subscriptions-epa-news-releases" class="menu__link">Subscribe</a></li>
                     <li class="menu__item"><a href="https://www.usa.gov/" class="menu__link">USA.gov{% include "./exit.html" %}</a></li>
-                    <li class="menu__item"><a href="https://www.whitehouse.gov/" class="menu__link">White House{% include "./exit.html" %}</a></li>
+                    <li class="menu__item"><a href="https://www.whitehouse.gov" class="menu__link">White House{% include "./exit.html" %}</a></li>
                 </ul>
             </div>
             <div class="footer__column">
@@ -40,7 +39,7 @@
                     <li class="menu__item"><a href="https://www.epa.gov/foia" class="menu__link">FOIA Requests</a></li>
                     <li class="menu__item"><a href="https://www.epa.gov/aboutepa/frequent-questions-specific-epa-programstopics" class="menu__link">Frequent Questions</a></li>
                 </ul>
-                <h2 style="margin-top: 0.5em;">Follow.</h2>
+                <h2>Follow.</h2>
                 <ul class="menu menu--social">
                     <li class="menu__item">
                         <a class="menu__link" aria-label="EPA’s Facebook" href="https://www.facebook.com/EPA">
