--- a/hawc/templates/includes/epa/header.html
+++ b/hawc/templates/includes/epa/header.html
@@ -1,14 +1,14 @@
 {% load static %}
-<section class="usa-banner" aria-label="Official government website">
+<section class="usa-banner" aria-label="Official website of the United States government">
     <div class="usa-accordion">
-        <header class="usa-banner__header" style="background-color: #f0f0f0;">
+        <header class="usa-banner__header">
             <div class="usa-banner__inner">
                 <div class="grid-col-auto">
                     <img class="usa-banner__header-flag" src="{% static 'vendor/uswds/3.1.0/img/us_flag_small.png' %}" alt="U.S. flag" height="11px" width="16px" />
                 </div>
-                <div class="grid-col-fill tablet:grid-col-auto">
+                <div class="grid-col-fill tablet:grid-col-auto" aria-hidden="true">
                     <p class="usa-banner__header-text">An official website of the United States government</p>
-                    <p class="usa-banner__header-action" aria-hidden="true">Here’s how you know</p>
+                    <p class="usa-banner__header-action">Here’s how you know</p>
                 </div>
                 <button class="usa-accordion__button usa-banner__button" aria-expanded="false" aria-controls="gov-banner">
                     <span class="usa-banner__button-text">Here’s how you know</span>
