moved '/docs/cms' to '/admin/cms'

--- a/hawc/templates/admin/index.html
+++ b/hawc/templates/admin/index.html
@@ -7,6 +7,7 @@
         <h2>{% trans 'Dashboard' %}</h2>
         <ul class="actionlist">
             <li><a href="{% url 'admin_dashboard' %}">Dashboard</a></li>
+            <li><a href="{% url 'wagtailadmin_home' %}">Wagtail CMS</a></li>
         </ul>
         <h2>{% translate 'Recent actions' %}</h2>
         <h3>{% translate 'My actions' %}</h3>
