--- a/hawc/templates/includes/epa/header.html
+++ b/hawc/templates/includes/epa/header.html
@@ -1,14 +1,14 @@
 {% load static %}
-<section class="usa-banner" aria-label="Official government website">
+<section class="usa-banner" aria-label="Official website of the United States government">
     <div class="usa-accordion">
-        <header class="usa-banner__header" style="background-color: #f0f0f0;">
+        <header class="usa-banner__header">
             <div class="usa-banner__inner">
                 <div class="grid-col-auto">
                     <img class="usa-banner__header-flag" src="{% static 'vendor/uswds/3.1.0/img/us_flag_small.png' %}" alt="U.S. flag" height="11px" width="16px" />
                 </div>
-                <div class="grid-col-fill tablet:grid-col-auto">
+                <div class="grid-col-fill tablet:grid-col-auto" aria-hidden="true">
                     <p class="usa-banner__header-text">An official website of the United States government</p>
-                    <p class="usa-banner__header-action" aria-hidden="true">Here’s how you know</p>
+                    <p class="usa-banner__header-action">Here’s how you know</p>
                 </div>
                 <button class="usa-accordion__button usa-banner__button" aria-expanded="false" aria-controls="gov-banner">
                     <span class="usa-banner__button-text">Here’s how you know</span>
@@ -57,16 +57,17 @@
                         </svg>
                     </span>
                 </a>
-                <button class="usa-menu-btn usa-button l-header__menu-button rounded-0 font-weight-light">MENU</button>
+                <button class="usa-menu-btn button--dark l-header__menu-button">MAIN MENU</button>
             </div>
             <div class="l-header__search">
                 <form class="usa-search usa-search--small usa-search--epa" method="get" action="https://search.epa.gov/epasearch">
                     <div role="search">
                         <label class="usa-sr-only" for="search-box">Search</label>
                         <input class="usa-input" id="search-box" type="search" name="querytext" placeholder="Search EPA.gov">
-                        <button class="usa-button" type="submit">
-                            <span class="usa-sr-only">Search</span>
-
+                        <button class="button button--dark" type="submit">
+                            <svg class="icon icon--social usa-search__submit-icon" aria-hidden="true" role="img" xlmns="http://www.w3.org/2000/svg">
+                                <use href="{% static 'vendor/uswds/3.1.0/img/sprite.svg' %}#search"></use>
+                            </svg>
                         </button>
                         <input type="hidden" name="areaname" value="">
                         <input type="hidden" name="areacontacts" value="">
