added 'Docs' navbar link

--- a/hawc/templates/includes/_navigation_links.html
+++ b/hawc/templates/includes/_navigation_links.html
@@ -9,6 +9,9 @@
     <a class="nav-link" href="{% url 'resources' %}">Resources</a>
 </li>
 <li class="nav-item">
+    <a class="nav-link" href="{% url 'wagtail_serve' '' %}">Docs</a>
+</li>
+<li class="nav-item">
     <a class="nav-link" href="{% url 'assessment:public_list' %}">Public Assessments</a>
 </li>
 
