--- a/hawc/apps/myuser/templates/myuser/userprofile_form.html
+++ b/hawc/apps/myuser/templates/myuser/userprofile_form.html
@@ -3,3 +3,13 @@
 {% block content %}
   {% crispy form %}
 {% endblock content %}
+
+{% block extrajs %}
+<script>
+$('#id_debug').prop('checked', window.localStorage.getItem('hawc-debug-badge')=="true");
+$('form').on('submit', function(){
+  window.localStorage.setItem('hawc-debug-badge', $('#id_debug').prop('checked').toString())
+  return true;
+})
+</script>
+{% endblock %}
