--- a/hawc/apps/eco/templates/eco/result_list.html
+++ b/hawc/apps/eco/templates/eco/result_list.html
@@ -16,11 +16,11 @@
     <tbody id="result-tbody">
         {% for object in result_list %}
         <tr>
-            <td><a href="{{object.design.study.get_absolute_url}}">{{object.design.study.short_citation}}</a></td>
-            <td><a href="{{object.design.get_absolute_url}}">{{object.design.name}}</a></td>
-            <td>{{object.cause.name}}</td>
-            <td>{{object.effect.name }}</td>
-            <td>{{object.name}}</td>
+            <td><a href="{{object.design.study.get_absolute_url}}">{{object.design.study.short_citation}}</a>{% debug_badge object.design.study_id %}</td>
+            <td><a href="{{object.design.get_absolute_url}}">{{object.design.name}}</a>{% debug_badge object.design_id %}</td>
+            <td>{{object.cause.name}}{% debug_badge object.cause.id %}</td>
+            <td>{{object.effect.name }}{% debug_badge object.effect.id %}</td>
+            <td>{{object.name}}{% debug_badge object.id %}</td>
             <td>
                 {% split object.modifying_factors as factors %}
                 {% for factor in factors %}
