--- a/hawc/apps/epi/templates/epi/outcome_list.html
+++ b/hawc/apps/epi/templates/epi/outcome_list.html
@@ -17,14 +17,14 @@
         {% for object in object_list %}
         <tr>
             <td>
-                <a href="{{object.study_population.study.get_absolute_url}}">{{object.study_population.study.short_citation}}</a>
+                <a href="{{object.study_population.study.get_absolute_url}}">{{object.study_population.study.short_citation}}</a>{% debug_badge object.study_population.study_id %}
             </td>
             <td>
-                <a href="{{object.study_population.get_absolute_url}}">{{object.study_population.name}}</a>
+                <a href="{{object.study_population.get_absolute_url}}">{{object.study_population.name}}</a>{% debug_badge object.study_population_id %}
             </td>
             <td class="previewModalParent">
                 <i data-id={{object.pk}} class="float-right fa fa-external-link previewModalIcon mr-2" title="preview"></i>
-                <a href="{{object.get_absolute_url}}">{{object.name}}</a>
+                <a href="{{object.get_absolute_url}}">{{object.name}}</a>{% debug_badge object.id %}
             </td>
             <td>
                 {{object.system|default:"--"}}
