--- a/hawc/apps/invitro/templates/invitro/ivendpoint_list.html
+++ b/hawc/apps/invitro/templates/invitro/ivendpoint_list.html
@@ -17,17 +17,17 @@
         {% for object in object_list %}
         <tr>
             <td>
-                <a href="{{object.experiment.study.get_absolute_url}}">{{object.experiment.study.short_citation}}</a>
+                <a href="{{object.experiment.study.get_absolute_url}}">{{object.experiment.study.short_citation}}</a>{% debug_badge object.experiment.study_id %}
             </td>
             <td>
-                <a href="{{object.experiment.get_absolute_url}}">{{object.experiment.name}}</a>
+                <a href="{{object.experiment.get_absolute_url}}">{{object.experiment.name}}</a>{% debug_badge object.experiment_id %}
             </td>
             <td>
-                <a href="{{object.chemical.get_absolute_url}}">{{object.chemical.name}}</a>
+                <a href="{{object.chemical.get_absolute_url}}">{{object.chemical.name}}</a>{% debug_badge object.chemical_id %}
             </td>
             <td  class="previewModalParent">
                 <i data-id={{object.pk}} class="float-right fa fa-external-link previewModalIcon mr-2" title="preview"></i>
-                <a href="{{object.get_absolute_url}}">{{object.name}}</a>
+                <a href="{{object.get_absolute_url}}">{{object.name}}</a>{% debug_badge object.id %}
             </td>
             <td>
                 {{object.effect|default:"--"}}
