--- a/hawc/apps/study/templates/study/study_list.html
+++ b/hawc/apps/study/templates/study/study_list.html
@@ -31,6 +31,7 @@
                 {% if not object.published %}
                 <i class="fa fa-eye-slash" title="Unpublished (not be visible to the public)" aria-hidden="true"></i>
                 {% endif %}
+                {% debug_badge object.id %}
             </td>
             <td>
                 {{object.full_citation}}
