--- a/hawc/apps/summary/templates/summary/visual_list.html
+++ b/hawc/apps/summary/templates/summary/visual_list.html
@@ -28,6 +28,7 @@
           {% if not visual.published %}
           <i class="fa fa-eye-slash" title="Unpublished (not be visible to the public)" aria-hidden="true"></i>
           {% endif %}
+          {% debug_badge visual.id %}
           {% if visual.caption %}
           <div class='text-muted'>{{visual.captionstriptags|striptags|truncatewords:20|safe}}</div>
           {% endif %}
