--- a/hawc/apps/lit/templates/lit/fragments/workflow_list.html
+++ b/hawc/apps/lit/templates/lit/fragments/workflow_list.html
@@ -1,4 +1,4 @@
-<div id="workflow-list">
+<div id="workflow-list" class="mr-4">
 {% for object in object_list %}
 {% include "lit/fragments/workflow_row.html" %}
 {% empty %}
