--- a/hawc/apps/lit/templates/lit/fragments/workflow_edit_row.html
+++ b/hawc/apps/lit/templates/lit/fragments/workflow_edit_row.html
@@ -1,5 +1,5 @@
 
-<div hx-target="this" hx-swap="outerHTML" class="workflow-edit-row mb-2">
+<div hx-target="this" hx-swap="outerHTML" class="workflow-edit-row mb-4">
     {% if form %}
     <div class="bg-lightblue rounded box-shadow px-5 py-4 pad-form">
         <form class="workflow-form" method=post enctype="multipart/form-data">
@@ -31,10 +31,12 @@
             <h3 class="py-2">Create Workflow</h3>
             {% endif %}
             {% crispy form %}
-            <div class="form-row d-flex flex-row-reverse justify-content-center px-3 pb-3">
+            <div class="form-row d-flex flex-row-reverse justify-content-center align-items-center px-3 pb-3">
+                <i class="fa fa-spinner fa-spin htmx-indicator ml-3" id="spinner-{{object.pk}}" aria-hidden="true"></i>
                 {% if form.instance.id %}
                 <button class="btn btn-primary ml-2"
                     hx-post="{% url 'lit:workflow-update' object.pk %}"
+                    hx-indicator="#spinner-{{object.pk}}"
                     hx-encoding="multipart/form-data"
                     style="width: 15rem; height: 2rem;">
                     <i class="fa fa-fw fa-save"></i>&nbsp;
@@ -42,12 +44,14 @@
                 </button>
                 <button class="btn btn-light"
                     hx-get="{% url 'lit:workflow-detail' object.pk %}"
+                    hx-indicator="#spinner-{{object.pk}}"
                     style="width: 10rem; height: 2rem;">
                     Cancel
                 </button>
                 {% else %}
                 <button class="btn btn-primary ml-2"
                     hx-post="{% url 'lit:workflow-create' assessment.pk %}"
+                    hx-indicator="#spinner-{{object.pk}}"
                     hx-encoding="multipart/form-data"
                     style="width: 15rem; height: 2rem;">
                     <i class="fa fa-fw fa-save"></i>&nbsp;Create
@@ -61,9 +65,8 @@
                 {% endif %}
             </div>
         </form>
+        {% endif %}
     </div>
-    {% block extrajs %}
-    {% include "common/helptext_popup_js.html" %}
-    {% endblock extrajs %}
-    {% endif %}
 </div>
+
+{% include "common/helptext_popup_js.html" %}
