--- a/hawc/apps/lit/templates/lit/workflows.html
+++ b/hawc/apps/lit/templates/lit/workflows.html
@@ -1,10 +1,19 @@
 {% extends 'assessment-rooted.html' %}
 {% block content %}
 <div class="d-flex">
-    <h2>Workflows</h2>
+    <h2 class="mb-2">Workflows
+      {% include "common/helptext_popup.html" with text="Literature workflows define a group of references that are in a specific state of tagging. References must match all admission criteria and none of the removal criteria to fit in a workflow. Workflows filter references for various pages in HAWC; like the tagging, conflict resolution, and list views. Links to some of these workflow-filtered pages can also be added to the Literature Review home page for quick access. "  %}
+    </h2>
     {% if obj_perms.edit_assessment %}
       <a class="btn mt-1 btn-primary flex-shrink-0 align-self-start ml-auto" hx-get="{% url 'lit:workflow-create' assessment.pk %}" hx-trigger="click" hx-target="#workflow-list" hx-swap="outerHTML" href="/">Create new workflow</a>
     {% endif %}
 </div>
+<p class="text-muted vw75">
+</p>
 {% include "lit/fragments/workflow_list.html" %}
+{% endblock %}
+
+{% block extrajs %}
+{% include "common/htmx_autocomplete.html" %}
+{% include "common/helptext_popup_js.html" %}
 {% endblock %}
