--- a/hawc/apps/assessment/templates/assessment/assessment_downloads.html
+++ b/hawc/apps/assessment/templates/assessment/assessment_downloads.html
@@ -45,12 +45,12 @@
           {% else %}
           <li class="list-group-item">
             {% url 'riskofbias:api:assessment-export' assessment.pk as the_url %}
-            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='rob-final' button_text=assessment.get_rob_name_display|add:' Export' help_text="All final reviews." %}
+            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='rob-final' button_text=assessment.get_rob_name_display|title|add:' Export' help_text="All final reviews." %}
           </li>
           {% if obj_perms.edit %}
           <li class="list-group-item">
             {% url 'riskofbias:api:assessment-full-export' assessment.pk as the_url %}
-            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='rob-all' button_text='Complete '|add:assessment.get_rob_name_display|add:' Export' help_text="All reviews, including individual reviews. Team members only." %}
+            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='rob-all' button_text='Complete '|add:assessment.get_rob_name_display|title|add:' Export' help_text="All reviews, including individual reviews. Team members only." %}
           </li>
           {% endif %}
           {% endif %}
@@ -70,11 +70,15 @@
           {% else %}
           <li class="list-group-item">
             {% url 'animal:api:assessment-full-export' assessment.pk as the_url %}
-            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='animal-data' button_text='Complete Export' help_text="Animal data." %}
+            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='animal-data' button_text='Complete Export' help_text="Complete animal bioassay data export, where each row is a endpoint-group for all data extracted." %}
+          </li>
+          <li class="list-group-item">
+            {% url 'animal:api:assessment-study-heatmap' assessment.pk as the_url %}
+            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='animal-study-summary' button_text='Study Summary' help_text="Study-level summary of animal bioassy data, where each row is a study. Columns with multiple values are pipe \"|\" delimited." %}
           </li>
           <li class="list-group-item">
             {% url 'animal:api:assessment-endpoint-export' assessment.pk as the_url %}
-            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='animal-summary' button_text='Endpoint Summary' help_text="Endpoint-summary animal data." %}
+            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='animal-summary' button_text='Endpoint Summary' help_text="Endpoint summary animal bioassay data, where each row is an extracted endpoint." %}
           </li>
           {% endif %}
         </ul>
@@ -89,18 +93,31 @@
       <h3 class="card-header">Epidemiology</h3>
       <div class="card-body p-0">
         <ul class="list-group list-group-flush">
+          {% if not assessment.has_epi_data %}
           <li class="list-group-item">
-            {% if not assessment.has_epi_data %}
             <p class="text-muted">No data available.</p>
-            {% else %}
-            {% if assessment.epi_version == EpiVersion.V1 %}
-            {% url 'epi:api:assessment-export' assessment.pk as the_url %}
-            {% elif assessment.epi_version == EpiVersion.V2 %}
-            {% url 'epiv2:api:assessment-export' assessment.pk as the_url %}
-            {% endif %}
-            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='epi-data' button_text='Complete Export' help_text="All epidemiology data." %}
-            {% endif %}
           </li>
+          {% else %}
+          {% if assessment.epi_version == EpiVersion.V1 %}
+          <li class="list-group-item">
+            {% url 'epi:api:assessment-export' assessment.pk as the_url %}
+            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='epi-data' button_text='Complete Export' help_text="Complete epidemiology export, where each row is an individual result associated with a health outcome." %}
+          </li>
+          <li class="list-group-item">
+            {% url 'epi:api:assessment-study-heatmap' assessment.pk as the_url %}
+            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='epi-study-design' button_text='Study Summary' help_text="Epidemiology study summary, where each row is a study. Columns with multiple values are pipe \"|\" delimited." %}
+          </li>
+          {% elif assessment.epi_version == EpiVersion.V2 %}
+          <li class="list-group-item">
+            {% url 'epiv2:api:assessment-export' assessment.pk as the_url %}
+            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='epi-data' button_text='Complete Export' help_text="Complete epidemiology export, where each row is an individual result associated with a health outcome." %}
+          </li>
+          <li class="list-group-item">
+            {% url 'epiv2:api:assessment-study-export' assessment.pk as the_url %}
+            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='epi-study-design' button_text='Study Summary' help_text="Epidemiology study summary, where each row is a study. Columns with multiple values are pipe \"|\" delimited." %}
+          </li>
+          {% endif %}
+          {% endif %}
         </ul>
       </div>
     </div>
@@ -147,13 +164,20 @@
       <h3 class="card-header">Ecological</h3>
       <div class="card-body p-0">
         <ul class="list-group list-group-flush">
+          {% if not assessment.has_eco_data %}
           <li class="list-group-item">
-            {% if not assessment.has_eco_data %}
             <p class="text-muted">No data available.</p>
-            {% else %}
+          </li>
+          {% else %}
+          <li class="list-group-item">
             {% url 'eco:api:assessment-export' assessment.pk as the_url %}
             {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='eco-data' button_text='Complete Export' help_text="All ecological data." %}
-            {% endif %}
+          </li>
+          <li class="list-group-item">
+            {% url 'eco:api:assessment-study-export' assessment.pk as the_url %}
+            {% include "assessment/fragments/downloads_select.html" with link=the_url format="xlsx" name='eco-study-summary' button_text='Study Summary' help_text="Ecology study summary data." %}
+          </li>
+          {% endif %}
           </li>
         </ul>
       </div>
