--- a/hawc/apps/docs/templates/docs/docs_index_page.html
+++ b/hawc/apps/docs/templates/docs/docs_index_page.html
@@ -1,18 +1,14 @@
-{% extends "base.html" %}
+{% extends "docs/docs_page.html" %}
 
 {% load wagtailcore_tags %}
 
-{% block body_class %}template-blogindexpage{% endblock %}
-
 {% block content %}
-<h1>{{ page.title }}</h1>
 
-<div class="intro">{{ page.intro|richtext }}</div>
+{{ block.super }}
 
-{% for post in page.get_children %}
-    <h2><a href="{% pageurl post %}">{{ post.title }}</a></h2>
-    {{ post.specific.intro }}
-    {{ post.specific.body|richtext }}
-{% endfor %}
+{% if node.children %}
+<h2>Content:</h2>
+{% include "docs/tree_list.html" %}
+{% endif %}
 
 {% endblock %}
