--- a/hawc/templates/admin/base.html
+++ b/hawc/templates/admin/base.html
@@ -15,5 +15,6 @@
         <a href="{{ site_url }}">{% trans 'View site' %}</a> /
     {% endif %}
     <a href="{% url 'swagger' %}">{% translate 'Swagger' %}</a> /
+    <a href="{% url 'wagtailadmin_home' %}">{% translate 'Wagtail CMS' %}</a> /
     {% include "admin/color_theme_toggle.html" %}
 {% endblock %}
