Update sidebar template for doc links

--- a/hawc/apps/docs/templates/docs/base.html
+++ b/hawc/apps/docs/templates/docs/base.html
@@ -7,7 +7,7 @@
 {% endblock title %}
 
 {% block sidebar_outer %}
-    {% include "includes/sidebar_container.html" with is_wagtail=True%}
+    {% include "includes/sidebar_container.html" with expand_docs=True%}
 {% endblock sidebar_outer %}
 
 {% block breadcrumbs_outer %}
