Consolidate models, remove confusing function, move some doc templates to 'components'

--- a/hawc/apps/docs/templates/docs/docs_page.html
+++ b/hawc/apps/docs/templates/docs/docs_page.html
@@ -10,4 +10,9 @@
 
 {{ page.body|richtext }}
 
+{% if node.children %}
+<h2>Content:</h2>
+{% include "docs/components/tree_list.html" %}
+{% endif %}
+
 {% endblock %}
