--- a/hawc/apps/docs/templates/docs/components/tree_list.html
+++ b/hawc/apps/docs/templates/docs/components/tree_list.html
@@ -1,7 +1,7 @@
 {% if node.children %}
 <ul>
     {% for child in node.children %}
-    {% include "docs/_tree_list.html" with node=child %}
+    {% include "docs/components/_tree_list.html" with node=child %}
     {% endfor %}
 </ul>
 {% endif %}
