--- a/hawc/apps/assessment/templates/assessment/assessment_detail.html
+++ b/hawc/apps/assessment/templates/assessment/assessment_detail.html
@@ -2,7 +2,7 @@
 
 {% block content %}
   <div class="d-flex">
-    <h2>{{object}}</h2>
+    <h2>{{object}}{% debug_badge object.id %}</h2>
     {% if crud == "Read" %}
       {% actions %}
           <!-- assessment editing -->
