add tables type and empty plot figures

--- a/hawc/apps/mgmt/templates/mgmt/analytics/overview.html
+++ b/hawc/apps/mgmt/templates/mgmt/analytics/overview.html
@@ -85,6 +85,7 @@
         {% analytics_card value=summary_count.datapivot label='total data pivots' %}
         {% analytics_card value=summary_count.table label='total tables' %}
         {% include 'common/analytics_plot.html' with title='Visuals by type' plot=summary_count.visual_barchart %}
+        {% include 'common/analytics_plot.html' with title='Tables by type' plot=summary_count.table_barchart %}
     </div>
 </div>
 {% endblock %}
