use == instead of is for numerical comparison

--- a/hawc/apps/lit/templates/lit/_reference_with_tags.html
+++ b/hawc/apps/lit/templates/lit/_reference_with_tags.html
@@ -65,7 +65,7 @@
                 </form>
                 {% endif %}
                 <div class="d-inline-block my-2">
-                    <b>{{user_tag.user.get_full_name}}</b> <i class="small">{{user_tag.last_updated}}</i> 
+                    <b>{{user_tag.user.get_full_name}}</b> <i class="small">{{user_tag.last_updated}}</i>
                 </div>
             </div>
             {% with user_tag.consensus_diff as diff %}
@@ -85,11 +85,10 @@
                 {% for tag in diff.difference %}
                     {% include 'lit/_nested_tag.html' with tag=tag extra_classes='refUserTag' %}
                 {% endfor %}
-                {% if diff.intersection|length is 0 and diff.difference|length is 0 and user_tag.deleted_tags|length is 0 %} 
+                {% if diff.intersection|length == 0 and diff.difference|length == 0 and user_tag.deleted_tags|length == 0 %}
                     <p>No tags selected</p>
                 {% endif %}
             {% endwith %}
-            
         </div>
         {% endfor %}{% endif %}
     </div>
